[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'flake8-noqa'
description = 'Flake8 noqa comment validation'
readme = 'README.md'
requires-python = '>= 3.7'
keywords = ['flake8', 'noqa']
classifiers = [
	'Framework :: Flake8',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Topic :: Software Development :: Libraries :: Python Modules',
	'Topic :: Software Development :: Quality Assurance',
]
dependencies = [
	'flake8 >= 3.8.0, < 8.0',
	'importlib_metadata >= 4.0.0, < 5.0.0; python_version < "3.8.0"',
	'typing_extensions >= 3.7.4.2',
]
dynamic = ['version']


[[project.authors]]
name = 'Peter Linss'
email = 'pypi@linss.com'


[project.urls]
homepage = 'https://github.com/plinss/flake8-noqa'


[project.license]
text = 'GNU Lesser General Public License v3'


[project.optional-dependencies]
dev = [
	'mypy',
	'flake8>=3.8.0,<6.0.0',  # <6.0.0 for other extensions
	'flake8-annotations',
	'flake8-bandit',
	'flake8-bugbear',
	'flake8-commas',
	'flake8-comprehensions',
	'flake8-continuation',
	'flake8-datetimez',
	'flake8-docstrings',
	'flake8-import-order',
	'flake8-literal',
	'flake8-noqa',
	'flake8-polyfill',
	'flake8-pyproject',
	'flake8-modern-annotations',
	'flake8-requirements',
	# 'flake8-tabs',
	'flake8-typechecking-import',
	'flake8-use-fstring',
	'pep8-naming',
]

test = [
	'flake8-docstrings',
]


[project.entry-points."flake8.extension"]
NQA0 = 'flake8_noqa.noqa_checker:NoqaChecker'
NQA1 = 'flake8_noqa.noqa_filter:NoqaFilter'


[tool.setuptools_scm]


[tool.flake8]
ignore = ['D107', 'E101', 'W191', 'ANN002', 'ANN003', 'ANN101', 'ANN102', 'ANN401', 'FS003']
max-line-length = 160

noqa-require-code = true

use-flake8-tabs = true
blank-lines-indent = 'never'

[tool.mypy]
mypy_path = 'stubs'

[[tool.mypy.overrides]]
module = [
    'flake8.*',
    'importlib.metadata',
]
ignore_missing_imports = true
